--- a/SASS/css/main.css
+++ b/SASS/css/main.css
@@ -1,10 +1,25 @@
 body {
-  background-color: black;
-  color: white;
+  background-color: purple;
+  color: orange;
+}
+
+.container {
+  -webkit-box-shadow: 3px 3px 4px 1px rgba(0, 0, 0, 0.6);
+          box-shadow: 3px 3px 4px 1px rgba(0, 0, 0, 0.6);
+  width: 500px;
+  height: 500px;
+  background-color: white;
 }
 
 .container p {
-  background: lightblue;
+  -webkit-box-shadow: 3px 3px 4px 1px rgba(0, 0, 0, 0.6);
+          box-shadow: 3px 3px 4px 1px rgba(0, 0, 0, 0.6);
+  height: 200px;
+  width: 200px;
+  background: lightgray;
   border-radius: 10px;
+  color: blue;
+  font-weight: bold;
+  color: black;
 }
 /*# sourceMappingURL=main.css.map */
