--- a/SASS2/css/main.css
+++ b/SASS2/css/main.css
@@ -1,1 +1,16 @@
-/* No CSS *//*# sourceMappingURL=main.css.map */
+.flex, body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+body {
+  height: 100%;
+}
+/*# sourceMappingURL=main.css.map */
